[gd_scene load_steps=4 format=3 uid="uid://cvl4jsitsxp0u"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_3uiwb"]
[ext_resource type="Script" path="res://voip/speak_indicator.gd" id="2_coti1"]

[sub_resource type="LabelSettings" id="LabelSettings_h8t8c"]
font_size = 30

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_3uiwb")
hide_ui_and_connect = true

[node name="MainMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -52.0
offset_right = 150.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Server" type="Button" parent="MainMenu/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Server"

[node name="Client" type="Button" parent="MainMenu/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Client"

[node name="InGameUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SpeakIndicator" type="Label" parent="InGameUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 80.0
offset_right = 20.0
offset_bottom = 103.0
grow_horizontal = 2
text = "speaking"
label_settings = SubResource("LabelSettings_h8t8c")
script = ExtResource("2_coti1")

[connection signal="pressed" from="MainMenu/Buttons/Server" to="." method="start_server_emit"]
[connection signal="pressed" from="MainMenu/Buttons/Client" to="." method="connect_client_emit"]
